# aero-sim

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: box.yaml  cylinder.yaml  import-model.yaml  nasa-apollo-lm.yaml  nasa-ingenuity.yaml  nasa-parker-probe.yaml  nasa-space-shuttle.yaml  nasa-x57.yaml  sphere.yaml
docs/: physics-and-math.md
models/: README.md
models/nasa/: README.md
scripts/: download_nasa_models.ps1
src/aero_sim/: __init__.py  cli.py  config.py  objects.py  solver.py  visualize.py
